[package]
name = "pinenut-log"
version = "0.0.2"
edition = "2021"
authors = ["Tangent <tangent_w@outlook.com>"]
description = "An extremely high performance logging system for clients (iOS, Android, Desktop), written in Rust."
readme = "../README.md"
repository = "https://github.com/TangentW/Pinenut"
license = "MIT"
keywords = ["log", "logger"]

[dependencies]
pinenut-derive = { version = "0.0.1", path = "derive" }
libc = "0.2.147"
thiserror = "1.0.48"
chrono = { version = "0.4.30", features = [
    "clock",
    "std",
], default-features = false }
zstd-safe = { version = "7.0.0", default-features = false }
aes = "0.8.3"
cipher = { version = "0.4.4", features = ["block-padding"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
p256 = { version = "0.13.2", features = [
    "alloc",
    "ecdh",
], default-features = false }
base64 = { version = "0.21.3", features = ["alloc"], default-features = false }

[dev-dependencies]
tempfile = "3.8.0"
